<resources>
    <string name="app_name">BeautifulProject</string>
    <string name="category">Category</string>
    <string name="todo">TODO</string>
    <string name="explore">Explore the night life of your city</string>
    <string name="free">Free</string>
    <string name="price">Price</string>
    <string name="next">Next</string>
    <string name="type">Type</string>
    <string name="tv_price">Price</string>
    <string name="accessibility">Accessibility</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>