<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ActivityFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_category"
        app:cardCornerRadius="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_category"
                android:paddingHorizontal="18dp"
                android:paddingVertical="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/img_love"
                android:layout_gravity="end"
                android:padding="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/baseline_favorite_border_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_explore"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/options"
                android:layout_marginBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_go"
        android:background="@drawable/shape"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="8dp"
        android:padding="12sp"
        android:textSize="16sp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/cv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_cat"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@id/btn_go"
        app:layout_constraintTop_toBottomOf="@id/btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_type"
        android:text="@string/type"
        android:paddingVertical="4dp"
        android:paddingHorizontal="12dp"
        android:textAllCaps="false"
        android:gravity="start"
        android:drawableEnd="@drawable/drop_down"
        android:textStyle="normal"
        android:textSize="16sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_cat"
        app:layout_constraintTop_toBottomOf="@id/tv_cat"
        android:layout_width="158dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/tv_price"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btn_go"
        app:layout_constraintEnd_toEndOf="@id/btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/sb_price"
        android:max="150"
        android:thumbTint="@color/blue_purple"
        android:progressTint="@color/blue_purple"
        android:progressBackgroundTint="@color/white"
        android:background="@drawable/sb_shape"
        app:layout_constraintStart_toStartOf="@id/tv_price"
        app:layout_constraintBottom_toBottomOf="@id/btn_type"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        android:layout_width="200dp"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/tv_accessibility"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/sb_price"
        app:layout_constraintTop_toBottomOf="@id/sb_price"
        android:text="@string/accessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/sb_accessibility"
        android:max="150"
        android:thumbTint="@color/blue_purple"
        android:progressTint="@color/blue_purple"
        android:progressBackgroundTint="@color/white"
        android:background="@drawable/sb_shape"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_accessibility"
        app:layout_constraintTop_toBottomOf="@id/tv_accessibility"
        android:layout_width="200dp"
        android:layout_height="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>